--- a/public/static/css/blog.css
+++ b/public/static/css/blog.css
@@ -1,4 +1,4 @@
-﻿pre{white-space:pre}
+pre{white-space:pre}
 .container-fixed:after{content:".";display:block;height:0;clear:both;visibility:hidden}
 .col-content{float:left}
 .col-other{float:right}
@@ -196,5 +196,5 @@ to{opacity:0}
 @media screen and (max-width:500px){.article-item .time{display:none}
 .article-item .title{padding-right:0}
 .col-content,.col-other{padding:0 0}
-.article-item .content .cover{width:100%;height:auto;float:none;margin-bottom:10px}
+.article-item .content .cover{width:100%;float:none;margin-bottom:10px}
 }
